@@ -1,9 +1,9 @@
 package org.adempiere.ad.column.callout;
 
 import com.google.common.collect.ImmutableList;
+import de.metas.ad_reference.ReferenceId;
 import de.metas.adempiere.service.IColumnBL;
 import de.metas.logging.LogManager;
-import de.metas.ad_reference.ReferenceId;
 import de.metas.util.Check;
 import de.metas.util.Services;
 import lombok.Builder;
@@ -474,7 +474,7 @@ public class AD_Column
 		else
 		{
 			logger.info("Returning first suggestion from: {}", suggestions);
-			return Optional.of(suggestions.get(0));
+			return Optional.of(suggestions.getFirst());
 		}
 	}
 
