@@ -1253,7 +1253,7 @@ public class HTMLEditor extends JPanel {
 					.getAttributes();
 
 		if (charattrs
-			.containsAttribute(StyleConstants.Bold, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Bold, Boolean.valueOf(true))) {
 			boldActionB.setBorder(border2);
 			bold = true;
 		} else if (bold) {
@@ -1262,7 +1262,7 @@ public class HTMLEditor extends JPanel {
 		}
 		boldActionB.setBorderPainted(bold);
 		if (charattrs
-			.containsAttribute(StyleConstants.Italic, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Italic, Boolean.valueOf(true))) {
 			italicActionB.setBorder(border2);
 			italic = true;
 		} else if (italic) {
@@ -1271,7 +1271,7 @@ public class HTMLEditor extends JPanel {
 		}
 		italicActionB.setBorderPainted(italic);
 		if (charattrs
-			.containsAttribute(StyleConstants.Underline, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Underline, Boolean.valueOf(true))) {
 			underActionB.setBorder(border2);
 			under = true;
 		} else if (under) {
@@ -2163,8 +2163,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.COLSPAN))
 			try {
 				Integer i =
-					new Integer(
-						tda.getAttribute(HTML.Attribute.COLSPAN).toString());
+						Integer.valueOf(tda.getAttribute(HTML.Attribute.COLSPAN).toString());
 				dlg.tdColspan.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2172,8 +2171,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.ROWSPAN))
 			try {
 				Integer i =
-					new Integer(
-						tda.getAttribute(HTML.Attribute.ROWSPAN).toString());
+						Integer.valueOf(tda.getAttribute(HTML.Attribute.ROWSPAN).toString());
 				dlg.tdRowspan.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2237,8 +2235,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLPADDING))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.CELLPADDING).toString());
+						Integer.valueOf(ta.getAttribute(HTML.Attribute.CELLPADDING).toString());
 				dlg.cellpadding.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2246,8 +2243,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLSPACING))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.CELLSPACING).toString());
+						Integer.valueOf(ta.getAttribute(HTML.Attribute.CELLSPACING).toString());
 				dlg.cellspacing.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2255,8 +2251,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.BORDER))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.BORDER).toString());
+						Integer.valueOf(ta.getAttribute(HTML.Attribute.BORDER).toString());
 				dlg.border.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
