@@ -208,10 +208,10 @@ public class ReferenceNoDAOTests extends RefIdTestBase
 
 		final PlainReferenceNoDAO dao = new PlainReferenceNoDAO();
 		assertThat(dao.retrieveAssociatedRecords(order, Gen1.class, I_C_Invoice.class)).hasSize(1);
-		assertThat(dao.retrieveAssociatedRecords(order, Gen1.class, I_C_Invoice.class).get(0)).isEqualTo(invoice);
+		assertThat(dao.retrieveAssociatedRecords(order, Gen1.class, I_C_Invoice.class).getFirst()).isEqualTo(invoice);
 
 		assertThat(dao.retrieveAssociatedRecords(order, Gen1.class, I_C_Order.class)).hasSize(1);
-		assertThat(dao.retrieveAssociatedRecords(order, Gen1.class, I_C_Order.class).get(0)).isEqualTo(order);
+		assertThat(dao.retrieveAssociatedRecords(order, Gen1.class, I_C_Order.class).getFirst()).isEqualTo(order);
 
 		// create another unused type
 		setupType(Gen2.class);
