@@ -128,7 +128,7 @@ public class ESRImportTest extends ESRTestBase
 		// check allocations
 		List<I_C_AllocationLine> allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(esrImportLine.getC_Invoice());
 		assertThat(allocLines.size()).isEqualTo(1);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(50));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(50));
 
 	}
 
@@ -226,7 +226,7 @@ public class ESRImportTest extends ESRTestBase
 		assertThat(lines.size()).isEqualTo(2);
 
 		// check first import line
-		final I_ESR_ImportLine esrImportLine1 = lines.get(0);
+		final I_ESR_ImportLine esrImportLine1 = lines.getFirst();
 		assertThat(esrImportLine1.isValid()).isTrue();
 		assertThat(esrImportLine1.isProcessed()).isTrue();
 		assertThat(esrImportLine1.getESR_Payment_Action()).isEqualTo(X_ESR_ImportLine.ESR_PAYMENT_ACTION_Fit_Amounts);
@@ -268,7 +268,7 @@ public class ESRImportTest extends ESRTestBase
 		// check allocations - first payment
 		List<I_C_AllocationLine> allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(esrImportLine1.getC_Invoice());
 		assertThat(allocLines.size()).isEqualTo(1);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(25));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(25));
 
 		// check allocations - second payment
 		allocLines = Services.get(IPaymentDAO.class).retrieveAllocationLines(esrLine1Payment2);
@@ -375,7 +375,7 @@ public class ESRImportTest extends ESRTestBase
 		// shall be one allocation
 		allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(esrImportLine.getC_Invoice());
 		assertThat(allocLines.size()).isEqualTo(1);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(50));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(50));
 
 		// esr processed
 		assertThat(esrImport.isProcessed()).isTrue();
@@ -460,8 +460,8 @@ public class ESRImportTest extends ESRTestBase
 
 		final List<I_C_AllocationLine> allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(esrImportLine.getC_Invoice());
 		assertThat(allocLines.size()).isEqualTo(2);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(25));
-		assertThat(allocLines.get(0).getC_Invoice_ID()).isEqualTo(getC_Invoice().getC_Invoice_ID());
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(25));
+		assertThat(allocLines.getFirst().getC_Invoice_ID()).isEqualTo(getC_Invoice().getC_Invoice_ID());
 		assertThat(allocLines.get(1).getWriteOffAmt()).isEqualByComparingTo(new BigDecimal(25));
 		assertThat(allocLines.get(1).getC_Invoice_ID()).isNotNull();
 
@@ -545,7 +545,7 @@ public class ESRImportTest extends ESRTestBase
 		// alocations
 		List<I_C_AllocationLine> allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(esrImportLine.getC_Invoice());
 		assertThat(allocLines.size()).isEqualTo(1);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(50));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(50));
 
 		// esr processed
 		refresh(esrImport, true);
@@ -635,11 +635,11 @@ public class ESRImportTest extends ESRTestBase
 		// allocations
 		allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(esrImportLine.getC_Invoice());
 		assertThat(allocLines.size()).isEqualTo(1);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(50));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(50));
 
 		allocLines = Services.get(IPaymentDAO.class).retrieveAllocationLines(esrLine1Payment);
 		assertThat(allocLines.size()).isEqualTo(2);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(50));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(50));
 		assertThat(allocLines.get(1).getAmount()).isEqualByComparingTo(new BigDecimal(20));
 
 		// esr processed
@@ -771,7 +771,7 @@ public class ESRImportTest extends ESRTestBase
 		// allocations
 		List<I_C_AllocationLine> allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(esrImportLine.getC_Invoice());
 		assertThat(allocLines.size()).isEqualTo(1);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(50));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(50));
 
 		// esr processed
 		refresh(esrImport, true);
@@ -921,7 +921,7 @@ public class ESRImportTest extends ESRTestBase
 
 		final List<I_C_AllocationLine> allocLines = Services.get(IAllocationDAO.class).retrieveAllocationLines(inv);
 		assertThat(allocLines.size()).isEqualTo(1);
-		assertThat(allocLines.get(0).getAmount()).isEqualByComparingTo(new BigDecimal(50));
+		assertThat(allocLines.getFirst().getAmount()).isEqualByComparingTo(new BigDecimal(50));
 
 		// esr processed
 		refresh(esrImport, true);
@@ -1587,7 +1587,7 @@ public class ESRImportTest extends ESRTestBase
 		esrImportBL.process(esrImport);
 
 		final List<I_ESR_ImportLine> lines = Services.get(IESRImportDAO.class).retrieveLines(esrImport);
-		final I_ESR_ImportLine esrImportLine1 = lines.get(0);
+		final I_ESR_ImportLine esrImportLine1 = lines.getFirst();
 		final I_ESR_ImportLine esrImportLine2 = lines.get(1);
 		final I_ESR_ImportLine esrImportLine3 = lines.get(2);
 
