@@ -167,7 +167,7 @@ public class PurchaseCandidateRepositoryTest
 		assertThat(purchaseCandidate.getPurchaseErrorItems()).isEmpty(); // because or single purchaseCandidateAllocRecord has AD_Issue_ID<=0
 		assertThat(purchaseCandidate.getPurchaseOrderItems()).hasSize(1);
 
-		final PurchaseOrderItem purchaseOrderItem = purchaseCandidate.getPurchaseOrderItems().get(0);
+		final PurchaseOrderItem purchaseOrderItem = purchaseCandidate.getPurchaseOrderItems().getFirst();
 		assertThat(purchaseOrderItem.getPurchasedQty().toBigDecimal()).isEqualByComparingTo(ONE);
 		assertThat(purchaseOrderItem.getPurchasedQty().getUomId().getRepoId()).isEqualTo(uom.getC_UOM_ID());
 		assertThat(purchaseOrderItem.getVendorId().getRepoId()).isEqualTo(VENDOR_ID);
