@@ -54,7 +54,7 @@ public class TestTwoOrdersTwoShipmentsOneInvoice extends AbstractTwoOrdersTwoInO
 	{
 		assertThat(invoices).as("We are expecting one invoice: " + invoices).hasSize(1);
 
-		final IInvoiceHeader invoice1 = invoices.remove(0);
+		final IInvoiceHeader invoice1 = invoices.removeFirst();
 
 		assertThat(invoice1.getPOReference()).isEqualTo(IC_PO_REFERENCE);
 		assertThat(invoice1.getDateAcct()).isEqualTo(IC_DATE_ACCT); // task 08437
